qustrlen: Add #warnings to explain how to deal with GCC 7.x's ASan

The build breaks by disabling ASan in this function because it also
removes its ability to emit SSE2 code. That's clearly broken because all
x86_64 can use SSE2. So this adds #warnings so people are told how to
choose their solution.

Clang doesn't currently define __SANITIZE_ADDRESS__ but I added a
conditional just in case some future version does.

Fixes: QTBUG-84856
Pick-to: 5.15
Change-Id: I552d244076a447ab92d7fffd1617875fdd8dbe62
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>